--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+cssparser = "0.35.0"
 env_logger = "0.11.7"
 im = "15.1.0"
 log = "0.4.26"
@@ -12,6 +13,7 @@ regex = "1.11.1"
 reqwest = { version = "0.12.15", features = ["blocking"] }
 scraper = "0.23.1"
 serde_json = "1.0.140"
+taffy = "0.7.7"
 ulid = "1.2.1"
 
 [dev-dependencies]
